--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>My Project</h1>
-
+    <div class="empty">
+      <div class="fill" draggable="true"></div>
+    </div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <script src="script.js"></script>
   </body>
 </html>
